adjusting scrollbar styles and fixing broken links

--- a/css/main.css
+++ b/css/main.css
@@ -73,21 +73,25 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 14px;
   /* width of the entire scrollbar */
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #bd2025;
+  background: none;
   /* color of the tracking area */
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #9f1f2c;
-  /* color of the scroll thumb */
-  border-radius: 20px;
-  /* roundness of the scroll thumb */
-  border: 6px solid rgba(0, 0, 0, 0);
+  background-color: #bd2025;
+  border: 4px solid transparent;
+  border-radius: 10px;
+  background-clip: padding-box;
+  height: 6px;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -383,7 +387,7 @@ button:hover {
     justify-content: center;
     background-color: #bd2025;
     height: auto;
-    width: 13.7vw;
+    width: 13.9vw;
     border-radius: 0px 0px 0.8em 0.8em;
   }
   .dropdown .dd-box-wrap {
@@ -1260,11 +1264,10 @@ button:hover {
 }
 
 #contact .left .contact-form-container .contact-form .row input[type=submit] {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 40px;
+  margin-right: 40px;
   margin-bottom: -10px;
   width: 100%;
-  padding: 1.5vh;
   font-family: "Avenir";
   font-size: 26px;
   color: #bd2025;
@@ -2285,7 +2288,7 @@ button:hover {
 }
 
 #edu .edu-container .left {
-  width: 60%;
+  width: 50%;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -2316,7 +2319,7 @@ button:hover {
 
 #edu .edu-container .left .signals-container {
   margin-left: 100px;
-  margin-top: 4vh;
+  margin-top: 6vh;
   height: 60%;
   display: flex;
   flex-direction: row;
@@ -2327,7 +2330,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  width: 30%;
+  width: 50%;
   margin-right: 2vw;
   height: 100%;
 }
@@ -2347,17 +2350,6 @@ button:hover {
   font-size: 14px;
 }
 
-#edu .edu-container .left .signals-container .desc .arrows {
-  margin-top: 4vh;
-  text-align: center;
-}
-
-#edu .edu-container .left .signals-container .desc .arrows .signal-arrow {
-  font-size: 26px;
-  margin: 2vh;
-  cursor: pointer;
-}
-
 #edu .edu-container .left .signals-container .box {
   width: 70%;
   display: flex;
@@ -2375,7 +2367,6 @@ button:hover {
   width: 100%;
   height: 100%;
   position: relative;
-  background-color: black;
 }
 
 #edu .edu-container .left .signals-container .box .signal .signal-desc {
@@ -2444,6 +2435,7 @@ button:hover {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 0.8em 0px 0px 0.8em;
 }
 
 #edu .edu-container .left .signals-container .box .signal-nav-container {
@@ -2460,16 +2452,28 @@ button:hover {
   padding-bottom: 8px;
   padding-right: 4px;
   padding-left: 4px;
-  border: 1px solid #111111;
-  background-color: #eaeff0;
+  border: 1px solid #9f1f2c;
+  background-color: #bd2025;
+  color: #eaeff0;
   cursor: pointer;
   transition: 0.5s 0s cubic-bezier(0.075, 0.82, 0.165, 1);
   font-size: 12px;
+  background-clip: padding-box;
 }
 
 #edu .edu-container .left .signals-container .box .signal-nav-container .signal-tab:hover {
-  background-color: #bd2025;
-  color: #eaeff0;
+  background-color: #eaeff0;
+  color: #111111;
+}
+
+#edu .edu-container .left .signals-container .box .signal-nav-container::-webkit-scrollbar-track {
+  background: #bd2025;
+  border-radius: 0px 0.8em 0.8em 0px;
+}
+
+#edu .edu-container .left .signals-container .box .signal-nav-container::-webkit-scrollbar-thumb {
+  border: 5px solid transparent;
+  background-color: #eaeff0;
 }
 
 #edu .edu-container .right {
@@ -2514,7 +2518,7 @@ button:hover {
 }
 
 #edu .edu-container .right .ref-container .ref-middle {
-  width: 50%;
+  width: 45%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -2525,6 +2529,7 @@ button:hover {
   height: 100%;
   margin: auto;
   background-image: url("../images/ref-drawing.png");
+  background-repeat: none;
 }
 
 #edu .edu-container .right .ref-container .ref-right {
