--- a/sass/modules/_defaults.scss
+++ b/sass/modules/_defaults.scss
@@ -17,18 +17,24 @@ body {
   }
 
   ::-webkit-scrollbar {
-    width: 10px;               /* width of the entire scrollbar */
+    width: 14px;               /* width of the entire scrollbar */
   }
   
   ::-webkit-scrollbar-track {
-    background-color:$accent-color;        /* color of the tracking area */
+    background:none;        /* color of the tracking area */
   }
   
   ::-webkit-scrollbar-thumb {
-    background-color: $darkaccent-color;    /* color of the scroll thumb */
-    border-radius: 20px;       /* roundness of the scroll thumb */
-    border:6px solid rgba(0, 0, 0, 0);
+    background-color:$accent-color;
+    border: 4px solid transparent;
+    border-radius:10px;
+    background-clip: padding-box;  
+    height:6px;
   }
+
+  ::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
 
   h1, h2, h3, h4, h5, h6 {
     font-family: $main-font;
